some changes made

--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Physics Class</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Chemistry Class</a>
+                                <a class="nav-link" href="#">Higher Math</a>
                             </li>
                         </ul>
                     </div>
